2005-01-19  Per Bothner  <per@bothner.com>

	* LineBufferedReader.java (read): Return before buffer full if
	input buffer exhausted and we got at least one char.

2005-01-02  Per Bothner  <per@bothner.com>

	* PrettyWriter.java (NEWLINE_SPACE): New newline-kind.
	(write [3 variants]): Maybe enqueue a NEWLINE_SPACE.

	* PrettyWriter.java: Some more normally-commented-out debug stuff.

	* Char.java: Change "select" (preprocessor) syntax.

2005-01-01  Per Bothner  <per@bothner.com>

	* LiteralFormat.java (content): New method.

2004-08-05  Per Bothner  <per@bothner.com>

	* PrettyWriter.java (endLogicalBlock):  Fix "dangling pointer" bug.

	* PrettyWriter.java (check):  New debugging method.

	* PrettyWriter.java:  Renamed QUEUED_OP_XXX to short QITEM_XXX.
	Renamed QUEUED_OP_SIZE TO QITEM_BASE_SIZE.
	Renamed QUEUED_OP_TYPE to QITEM_TYPE_AND_SIZE.

2004-07-28  Per Bothner  <per@bothner.com>

	* Options.java (keys):  Make non-recursive.

2004-07-27  Chris Dean  <ctdean@sokitomi.com>

	* Options.java:  Add keys() function.

2004-07-20  Per Bothner  <per@bothner.com>

	* IntegerFormat.java:  Remove useless import statements.
	* LiteralFormat.java (toString):  Adding a String and a char[]
	doesn't behave as expected.

2004-06-12  Per Bothner  <per@bothner.com>

	* Lexer.java (pushNesting, popNesting):  Moved from XQParser.
	* LineBufferedReader.java (readState, getReadState):
	Moved from gnu.mapping.InPort.

2004-06-07  Per Bothner  <per@bothner.com>

	* PrettyWriter.java (maybeOutput):  Clear currentBlock if needed.

2004-05-28  Per Bothner  <per@bothner.com>

	* CompoundFormat.java (format):  Check for missing argument.
	* IntegerFormat.java (format):  Check for missing argument.

2004-05-22  Per Bothner  <per@bothner.com>

	* PrettyWriter.java (currentBlock):  -1 now means none.
	(startLogicalBlock, endLogicalBlock):  Update accordinly.
	(endLogicalBlock):  Simplify and correct test.

	* PrettyWriter.java